# backend

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-test.yml
alembic/: env.py
alembic/versions/: 2025_05_13_1033-542f6b63c95a_added_table_user.py  2025_05_15_0032-f9fbf4aa6c3f_add_project_table.py  2025_05_15_1050-a2d3d19b62d2_add_project_relation_user_table.py  2025_05_16_1051-80ff7a5bab6f_add_private_to_project.py  2025_05_16_1404-ec84950f2b01_add_version_table.py  2025_05_17_0201-0a4dea85a024_add_api_token_table.py  2025_05_17_0758-7ffd5088a3cd_change_version_tag_to_nullable.py  2025_05_17_1010-15d58d70675f_add_tables_coordiante_colors_to_version.py  2025_05_17_1011-414674b157fa_add_assistant_chat_message_table.py
docker/: docker-compose.env.template
docker/backend/: Dockerfile
src/: __init__.py  __main__.py  exceptions.py
src/ai_assistant/: ai_lib.py  routes.py  schemas.py
src/ai_assistant/chat/: ai_lib.py  routes.py  schemas.py  utils.py
src/ai_assistant/chat_history/: models.py  repositories.py  routes.py  schemas.py  use_cases.py
src/auth/by_password/: dependencies.py  router.py  schemas.py  service.py  use_cases.py
src/auth/tokens/: __init__.py  decode_.py  dependencies.py  encode_.py  router.py  use_cases.py  utils.py
src/config/: __init__.py  settings.py
src/config/ai_assistant/: settings.py
src/core_/: adapters.py  repository.py  schemas.py  specifications.py  work_unit.py
src/infrastructure/: redis_.py
src/projects/: projects_routes.py
(+49 files in other folders)
